...
  if(value==null)return null to unit
  val u=unit.replace("μ","u").replace("µ","u").replace(" ","").lowercase()
  return when {
   metricKey in setOf("WBC","NEUT#","LYMPH#","MONO#","EOS#","BASO#","NRBC#","PLT","P-LCC") && u in setOf("10^9/l","×10^9/l","x10^9/l") -> value to "×10^9/L"
   metricKey in setOf("NEUT%","LYMPH%","MONO%","EOS%","BASO%","NRBC%","HCT","RDW","PCT","PDW","P-LCR") && u=="%" -> value to "%"
   metricKey=="RBC" && u in setOf("10^12/l","×10^12/l","x10^12/l") -> value to "×10^12/L"
   metricKey in setOf("HGB","ALB") && u=="g/l" -> value to "g/L"
   metricKey=="HGB" && u=="g/dl" -> value*10.0 to "g/L"
   metricKey=="ALB" && u=="g/dl" -> value*10.0 to "g/L"
   metricKey in setOf("TBIL","CREA","UA") && u in setOf("umol/l","μmol/l") -> value to "μmol/L"
   metricKey=="CREA" && u=="mg/dl" -> value*88.4 to "μmol/L"
   metricKey=="TBIL" && u=="mg/dl" -> value*17.104 to "μmol/L"
   metricKey=="UA" && u=="mg/dl" -> value*59.48 to "μmol/L"
...
